<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.doublerobot</groupId>
    <artifactId>shade-test</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <main-class>com.doublerobot.HelloWorld</main-class>
        <java-mod-name>shade.test</java-mod-name>

        <javafx-mods-version>javafx-jmods-15.0.1</javafx-mods-version>
        <javafx-libs-version>javafx-sdk-15.0.1</javafx-libs-version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <jtoolprovider.version>1.0.23</jtoolprovider.version>
    </properties>

    <dependencies>
        <!-- Base JavaFX import. This dependency is provided via a module, so we don't want it included in the
         shaded master jar. -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>15</version>
        </dependency>
        <!-- This dependency is a normal Maven dependency. It brings in other transitive dependencies as well.
         We want to include the contents of this (and all of the other transitive dependencies in our final
         shaded master jar. -->
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>1.0.2</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.9.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
                <plugin>
                    <groupId>io.github.wiverson</groupId>
                    <artifactId>jtoolprovider-plugin</artifactId>
                    <version>${jtoolprovider.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.0.0-M1</version>
                <!-- This is an app, so we don't want to install it in the Maven local repository -->
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.5</version>
                <configuration>
                    <mainClass>com.doublerobot.HelloWorld</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <configuration>
                    <finalName>shade-test</finalName>
                    <artifactSet>
                        <excludes>
                            <exclude>**/module-info.java</exclude>
                            <exclude>**/module-info.class</exclude>
                            <exclude>module-info.java</exclude>
                            <exclude>module-info.class</exclude>
                            <exclude>org.openjfx:javafx-base</exclude>
                            <exclude>org.openjfx:javafx-controls</exclude>
                            <exclude>org.openjfx:javafx-fxml</exclude>
                            <exclude>org.openjfx:javafx-graphics</exclude>
                            <exclude>org.openjfx:javafx-media</exclude>
                            <exclude>org.openjfx:javafx-swing</exclude>
                            <exclude>org.openjfx:javafx-web</exclude>
                        </excludes>
                    </artifactSet>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.MF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <outputDirectory>${project.build.directory}/shaded-jar/</outputDirectory>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>prepare</id>
                        <phase>package</phase>
                        <configuration>
                            <target>
                                <unzip src="target/shaded-jar/shade-test.jar"
                                       dest="target/unpacked-shade/"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>io.github.wiverson</groupId>
                <artifactId>jtoolprovider-plugin</artifactId>
                <version>${jtoolprovider.version}</version>
                <executions>
                    <execution>
                        <id>jdeps</id>
                        <phase>package</phase>
                        <goals>
                            <goal>java-tool</goal>
                        </goals>
                        <configuration>
                            <toolName>jdeps</toolName>
                            <args>
                                <arg>--module-path</arg>
                                <arg>${project.basedir}/${javafx-libs-version}/lib/</arg>
                                <arg>--add-modules</arg>
                                <arg>javafx.base,javafx.controls,javafx.graphics,java.logging</arg>
                                <arg>--generate-module-info</arg>
                                <arg>${project.build.directory}/work</arg>
                                <arg>${project.build.directory}/shaded-jar/${project.artifactId}.jar</arg>
                            </args>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.moditect</groupId>
                <artifactId>moditect-maven-plugin</artifactId>
                <version>1.0.0.RC1</version>
                <executions>
                    <execution>
                        <id>add-module-infos</id>
                        <phase>package</phase>
                        <goals>
                            <goal>add-module-info</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/modules</outputDirectory>
                            <modules>
                                <module>
                                    <file>${project.build.directory}/shaded-jar/shade-test.jar</file>
                                    <moduleInfoFile>${project.build.directory}/work/shade.test/module-info.java
                                    </moduleInfoFile>
                                </module>
                            </modules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>


        <profile>
            <id>build-mac-installer</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>io.github.wiverson</groupId>
                        <artifactId>jtoolprovider-plugin</artifactId>
                        <version>${jtoolprovider.version}</version>
                        <executions>
                            <execution>
                                <id>jpackage-mac-installer</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>java-tool</goal>
                                </goals>
                                <configuration>
                                    <toolName>jpackage</toolName>
                                    <args>
                                        <arg>--jlink-options</arg>
                                        <arg>--strip-native-commands --strip-debug --no-header-files --no-man-pages
                                            --compress=2
                                        </arg>
                                        <arg>--name</arg>
                                        <arg>TestApp</arg>
                                        <arg>--icon</arg>
                                        <arg>${project.basedir}/app-icon.icns</arg>
                                        <arg>--module-path</arg>
                                        <arg>
                                            ${java.home}/jmods/:${project.build.directory}/modules/:${project.basedir}/${javafx-mods-version}/
                                        </arg>
                                        <arg>--add-modules</arg>
                                        <arg>${java-mod-name},javafx.base,javafx.controls,javafx.graphics,java.logging
                                        </arg>
                                        <arg>-m</arg>
                                        <arg>${java-mod-name}/${main-class}</arg>
                                        <arg>--dest</arg>
                                        <arg>${project.build.directory}</arg>
                                    </args>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>build-win-installer</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>io.github.wiverson</groupId>
                        <artifactId>jtoolprovider-plugin</artifactId>
                        <version>${jtoolprovider.version}</version>
                        <executions>
                            <execution>
                                <id>jpackage-win-installer</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>java-tool</goal>
                                </goals>
                                <configuration>
                                    <toolName>jpackage</toolName>
                                    <args>
                                        <arg>--jlink-options</arg>
                                        <arg>--strip-native-commands --strip-debug --no-header-files --no-man-pages
                                            --compress=2
                                        </arg>
                                        <arg>--name</arg>
                                        <arg>TestApp</arg>
                                        <arg>--win-menu</arg>
                                        <arg>--win-menu-group</arg>
                                        <arg>Sample</arg>
                                        <arg>--icon</arg>
                                        <arg>${project.basedir}\app-icon.ico</arg>
                                        <arg>--module-path</arg>
                                        <arg>
                                            ${java.home}\jmods\;${project.build.directory}\modules\;${project.basedir}\${javafx-mods-version}/
                                        </arg>
                                        <arg>--add-modules</arg>
                                        <arg>${java-mod-name},javafx.base,javafx.controls,javafx.graphics,java.logging
                                        </arg>
                                        <arg>-m</arg>
                                        <arg>${java-mod-name}/${main-class}</arg>
                                        <arg>--dest</arg>
                                        <arg>${project.build.directory}</arg>
                                    </args>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>